# random-bits

./: .gitignore  README.md
std-optional-bool/: CMakeLists.txt  build.sh  example.cc  tests.cc
std-optional-bool/1_Initial/: initial.cc
testable-code-with-factories/1_Initial/: build.sh  initial.cc
testable-code-with-factories/2/: build.sh
testable-code-with-factories/2_MultipleSensors/: multiple_sensors  multiple_sensors.cc
testable-code-with-factories/3_FactoryFunction_cpp/: CMakeLists.txt  build.sh  factory_function.cc  factory_function.h  factory_function_test.cc  main.cc
testable-code-with-factories/3_FactoryFunction_java/: build.sh
testable-code-with-factories/3_FactoryFunction_java/src/main/: ITemperatureSensor.java  TemperatureSensorA.java  TemperatureSensorB.java  TemperatureSensorC.java  TemperatureSensorModel.java  WeatherReport.java  WeatherStation.java  WeatherStationMain.java
